fixed right div alignment

--- a/style.css
+++ b/style.css
@@ -106,5 +106,5 @@ html{
     margin:4px;
 }
 input{
-    
+    margin:4px;
 }
